src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>APTPS_Product_Id__c</fullName>
        <description>To identify products without price book entry while creating opportunity line items</description>
        <label>Product Id</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Details__c</fullName>
        <inlineHelpText>Jurisdictions that were applied to the SalesTax Calculation, including name and rate.  Cannot be Edited.</inlineHelpText>
        <label>Sales Tax Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__LineTax__c</fullName>
        <inlineHelpText>Sales Tax Calculated For This Line - Cannot Be Edited</inlineHelpText>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__LineTotal__c</fullName>
        <formula>TotalPrice  +  AVA_SFCORE__LineTax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Rate__c</fullName>
        <inlineHelpText>Tax Rate applied to this line.  Cannot be Edited</inlineHelpText>
        <label>Sales Tax Rate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acceptable_Equal_1__c</fullName>
        <inlineHelpText>Other manufacturers we are competing with</inlineHelpText>
        <label>Acceptable Equal 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAF</fullName>
                </value>
                <value>
                    <fullName>AAON</fullName>
                </value>
                <value>
                    <fullName>ABB</fullName>
                </value>
                <value>
                    <fullName>AboveAir</fullName>
                </value>
                <value>
                    <fullName>Addison</fullName>
                </value>
                <value>
                    <fullName>Advantix</fullName>
                </value>
                <value>
                    <fullName>Aerco Boilers</fullName>
                </value>
                <value>
                    <fullName>AMANA</fullName>
                </value>
                <value>
                    <fullName>Annexair</fullName>
                </value>
                <value>
                    <fullName>ArchtiChill</fullName>
                </value>
                <value>
                    <fullName>Armstrong</fullName>
                </value>
                <value>
                    <fullName>Armstrong Pumps</fullName>
                </value>
                <value>
                    <fullName>Aurora Pump</fullName>
                </value>
                <value>
                    <fullName>Bard</fullName>
                </value>
                <value>
                    <fullName>Belimo</fullName>
                </value>
                <value>
                    <fullName>Bosch</fullName>
                </value>
                <value>
                    <fullName>Bry-Air</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
                <value>
                    <fullName>Camfill Farr</fullName>
                </value>
                <value>
                    <fullName>CaptiveAire</fullName>
                </value>
                <value>
                    <fullName>Carel USA</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Chigo</fullName>
                </value>
                <value>
                    <fullName>Chil-Pak</fullName>
                </value>
                <value>
                    <fullName>China Refrigeration</fullName>
                </value>
                <value>
                    <fullName>Cleaver Brooks</fullName>
                </value>
                <value>
                    <fullName>ClimaCool</fullName>
                </value>
                <value>
                    <fullName>Climatecraft</fullName>
                </value>
                <value>
                    <fullName>Climate Master</fullName>
                </value>
                <value>
                    <fullName>Climate Technologies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acceptable_Equal_2__c</fullName>
        <inlineHelpText>Other manufacturers we are competing with</inlineHelpText>
        <label>Acceptable Equal 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAF</fullName>
                </value>
                <value>
                    <fullName>AAON</fullName>
                </value>
                <value>
                    <fullName>ABB</fullName>
                </value>
                <value>
                    <fullName>AboveAir</fullName>
                </value>
                <value>
                    <fullName>Addison</fullName>
                </value>
                <value>
                    <fullName>Advantix</fullName>
                </value>
                <value>
                    <fullName>Aerco Boilers</fullName>
                </value>
                <value>
                    <fullName>AMANA</fullName>
                </value>
                <value>
                    <fullName>Annexair</fullName>
                </value>
                <value>
                    <fullName>ArchtiChill</fullName>
                </value>
                <value>
                    <fullName>Armstrong</fullName>
                </value>
                <value>
                    <fullName>Armstrong Pumps</fullName>
                </value>
                <value>
                    <fullName>Aurora Pump</fullName>
                </value>
                <value>
                    <fullName>Bard</fullName>
                </value>
                <value>
                    <fullName>Belimo</fullName>
                </value>
                <value>
                    <fullName>Bosch</fullName>
                </value>
                <value>
                    <fullName>Bry-Air</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
                <value>
                    <fullName>Camfill Farr</fullName>
                </value>
                <value>
                    <fullName>CaptiveAire</fullName>
                </value>
                <value>
                    <fullName>Carel USA</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Chigo</fullName>
                </value>
                <value>
                    <fullName>Chil-Pak</fullName>
                </value>
                <value>
                    <fullName>China Refrigeration</fullName>
                </value>
                <value>
                    <fullName>Cleaver Brooks</fullName>
                </value>
                <value>
                    <fullName>ClimaCool</fullName>
                </value>
                <value>
                    <fullName>Climatecraft</fullName>
                </value>
                <value>
                    <fullName>Climate Master</fullName>
                </value>
                <value>
                    <fullName>Climate Technologies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Gross_Margin__c</fullName>
        <description>Created for the DSO&apos;s</description>
        <label>Actual Gross Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Marginpct__c</fullName>
        <description>Created for the DSO&apos;s</description>
        <label>Actual Gross Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Ship_Date__c</fullName>
        <description>Estimated Ship Date</description>
        <inlineHelpText>Actual Ship Date</inlineHelpText>
        <label>Actual Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Discount_Amount__c</fullName>
        <label>Discount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Discount_Percent__c</fullName>
        <label>Discount %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig_LineType__c</fullName>
        <label>Line Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Auto_Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BOD_Vendor__c</fullName>
        <description>Created for the DSO&apos;s</description>
        <label>BOD Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAF</fullName>
                </value>
                <value>
                    <fullName>AAON</fullName>
                </value>
                <value>
                    <fullName>ABB</fullName>
                </value>
                <value>
                    <fullName>AboveAir</fullName>
                </value>
                <value>
                    <fullName>Addison</fullName>
                </value>
                <value>
                    <fullName>Advantix</fullName>
                </value>
                <value>
                    <fullName>Aerco Boilers</fullName>
                </value>
                <value>
                    <fullName>AMANA</fullName>
                </value>
                <value>
                    <fullName>Annexair</fullName>
                </value>
                <value>
                    <fullName>ArchtiChill</fullName>
                </value>
                <value>
                    <fullName>Armstrong</fullName>
                </value>
                <value>
                    <fullName>Armstrong Pumps</fullName>
                </value>
                <value>
                    <fullName>Aurora Pump</fullName>
                </value>
                <value>
                    <fullName>Bard</fullName>
                </value>
                <value>
                    <fullName>Belimo</fullName>
                </value>
                <value>
                    <fullName>Bosch</fullName>
                </value>
                <value>
                    <fullName>Bry-Air</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
                <value>
                    <fullName>Camfill Farr</fullName>
                </value>
                <value>
                    <fullName>CaptiveAire</fullName>
                </value>
                <value>
                    <fullName>Carel USA</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Chigo</fullName>
                </value>
                <value>
                    <fullName>Chil-Pak</fullName>
                </value>
                <value>
                    <fullName>China Refrigeration</fullName>
                </value>
                <value>
                    <fullName>Cleaver Brooks</fullName>
                </value>
                <value>
                    <fullName>ClimaCool</fullName>
                </value>
                <value>
                    <fullName>Climatecraft</fullName>
                </value>
                <value>
                    <fullName>Climate Master</fullName>
                </value>
                <value>
                    <fullName>Climate Technologies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Bid_Alternate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_to_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Total__c</fullName>
        <formula>Cost__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Total $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Number__c</fullName>
        <description>Customer Invoice #</description>
        <inlineHelpText>Customer Invoice #</inlineHelpText>
        <label>Customer Invoice #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_ID__c</fullName>
        <description>Added by Gary Sanders.   Will be logic done by Daikin that fills this.  Added for development and testing activities before this is done.  Some records will be filled with dummy values for testing</description>
        <externalId>true</externalId>
        <label>DST ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_App_Key__c</fullName>
        <label>DT App Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Code_Item__c</fullName>
        <label>DT Code Item</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DT_Format_Number__c</fullName>
        <label>DT Format Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_InputsAndOutputs__c</fullName>
        <label>DT InputsAndOutputs</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DT_Item_Status__c</fullName>
        <label>DT Item Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_PCL__c</fullName>
        <label>DT PCL</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Parent_ID__c</fullName>
        <label>DT Parent ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <description>Equipment + Freight Discount %</description>
        <inlineHelpText>Equipment + Freight Discount %</inlineHelpText>
        <label>Equipment + Freight Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Equipment + Freight Discount $</description>
        <inlineHelpText>Equipment + Freight Discount $
Divide this amount by Quantity of Product item</inlineHelpText>
        <label>Equipment + Freight Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Gross_Margin__c</fullName>
        <description>Equipment Gross Margin %</description>
        <inlineHelpText>Equipment Gross Margin %</inlineHelpText>
        <label>Equipment Gross Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Equipment_Price_FOB__c</fullName>
        <description>Unit Equipment Cost $
(Item Price * Multiplier (PAR) ) + Commission Add On + Start-up Add On + Service Add On + Misc. Add On One $ + Misc. Add On Two $ + Misc. Add On Three $ + Misc. Add On Four $</description>
        <formula>ROUND(( List_Price__c  * Multiplier_PAR__c),2)  + Service_Add_On__c + Start_up_Add_On__c + Outsource_Add_On__c +  Misc_Add_On_One_Amount__c +  Misc_Add_On_Two_Amount__c +  Misc_Add_On_Three_Amount__c +  Misc_Add_On_Four_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit Equipment Cost $
(List Price $ * Multiplier (PAR) ) + Commission Add On + Start-up Add On + Service Add On + Misc. Add On One $ + Misc. Add On Two $ + Misc. Add On Three $ + Misc. Add On Four $</inlineHelpText>
        <label>Unit Equipment Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_With_F_L__c</fullName>
        <description>Total Equipment + Freight Cost $
(Unit Equipment Cost $  +  Unit Freight Cost $) * Quantity</description>
        <formula>(Equipment_Price_FOB__c  +  Total_Freight_Logistic__c) *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Equipment + Freight Cost $
(Unit Equipment Cost $  +  Unit Freight Cost $) * Quantity</inlineHelpText>
        <label>Total Equipment + Freight Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <defaultValue>1.0</defaultValue>
        <description>Exchange rate from USD to Opportunity&apos;s Local Currency.</description>
        <inlineHelpText>Exchange rate from USD to Opportunity&apos;s Local Currency.</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight_Gross_Margin__c</fullName>
        <description>Freight Gross Margin %</description>
        <inlineHelpText>Freight Gross Margin %</inlineHelpText>
        <label>Freight Gross Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Freight_Percent__c</fullName>
        <description>Domestic Freight %</description>
        <inlineHelpText>Domestic Freight %</inlineHelpText>
        <label>Domestic Freight %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <description>Domestic Freight $</description>
        <inlineHelpText>Domestic Freight $
Divide this cost by Quantity of Product item</inlineHelpText>
        <label>Domestic Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Amount__c</fullName>
        <label>GM USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Percent__c</fullName>
        <label>GM %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsAccessory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Accessory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAlternate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Alternate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Outside_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Outside Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Priced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Priced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quick_Ship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quick Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>Item #</description>
        <inlineHelpText>Item #</inlineHelpText>
        <label>Item #</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Property_Name__c</fullName>
        <label>Item Property Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Property_Value__c</fullName>
        <label>Item Property Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Amount_Report__c</fullName>
        <description>Field to be used in reports to display correct Total Opportunity Product Amount.</description>
        <formula>Total_Selling_Price_w_Log_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to be used in reports to display correct Total Opportunity Product Amount.</inlineHelpText>
        <label>Line Amount (Report)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Expected_Revenue_Report__c</fullName>
        <description>Field to be used in reports to display correct Total Opportunity Product Expected Revenue.</description>
        <formula>Line_Amount_Report__c *  Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to be used in reports to display correct Total Opportunity Product Expected Revenue.</inlineHelpText>
        <label>Line Expected Revenue (Report)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price_Total__c</fullName>
        <formula>Quantity * List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price Total $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Currency__c</fullName>
        <description>Local Currency of Opportunity.</description>
        <formula>TEXT((Opportunity.Local_Currency__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Currency of Opportunity.</inlineHelpText>
        <label>Local Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Add_On__c</fullName>
        <description>Export Freight Add On $</description>
        <inlineHelpText>Export Freight Add On $
Divide this cost by Quantity of Product item</inlineHelpText>
        <label>Export Freight Add On $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Percent__c</fullName>
        <label>Margin %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Four_Amount__c</fullName>
        <description>Specifies amount of fourth miscellaneous cost add on.</description>
        <inlineHelpText>Specifies amount of fourth miscellaneous cost add on.
Divide this cost by Quantity of Product item</inlineHelpText>
        <label>Misc. Add On Four $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Four_Type__c</fullName>
        <description>Specifies type of fourth miscellaneous cost add on.</description>
        <inlineHelpText>Specifies type of fourth miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On Four Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contingency</fullName>
                </value>
                <value>
                    <fullName>Contractor Markup</fullName>
                </value>
                <value>
                    <fullName>CO-OP Marketing Reserve</fullName>
                </value>
                <value>
                    <fullName>Extended Warranty</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Labor Hours</fullName>
                </value>
                <value>
                    <fullName>Maintenance Visits</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Standard Warranty</fullName>
                </value>
                <value>
                    <fullName>Training Factory</fullName>
                </value>
                <value>
                    <fullName>Training On Site</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Warranty Reserve</fullName>
                </value>
                <value>
                    <fullName>Witness Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Misc_Add_On_One_Amount__c</fullName>
        <description>Specifies amount of first miscellaneous cost add on.</description>
        <inlineHelpText>Specifies amount of first miscellaneous cost add on.
Divide this cost by Quantity of Product item</inlineHelpText>
        <label>Misc. Add On One $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_One_Type__c</fullName>
        <description>Specifies type of first miscellaneous cost add on.</description>
        <inlineHelpText>Specifies type of first miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On One Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contingency</fullName>
                </value>
                <value>
                    <fullName>Contractor Markup</fullName>
                </value>
                <value>
                    <fullName>CO-OP Marketing Reserve</fullName>
                </value>
                <value>
                    <fullName>Extended Warranty</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Labor Hours</fullName>
                </value>
                <value>
                    <fullName>Maintenance Visits</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Standard Warranty</fullName>
                </value>
                <value>
                    <fullName>Training Factory</fullName>
                </value>
                <value>
                    <fullName>Training On Site</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Warranty Reserve</fullName>
                </value>
                <value>
                    <fullName>Witness Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Three_Amount__c</fullName>
        <description>Specifies amount of third miscellaneous cost add on.</description>
        <inlineHelpText>Specifies amount of third miscellaneous cost add on.
Divide this cost by Quantity of Product item</inlineHelpText>
        <label>Misc. Add On Three $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Three_Type__c</fullName>
        <description>Specifies type of third miscellaneous cost add on.</description>
        <inlineHelpText>Specifies type of third miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On Three Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contingency</fullName>
                </value>
                <value>
                    <fullName>Contractor Markup</fullName>
                </value>
                <value>
                    <fullName>CO-OP Marketing Reserve</fullName>
                </value>
                <value>
                    <fullName>Extended Warranty</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Labor Hours</fullName>
                </value>
                <value>
                    <fullName>Maintenance Visits</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Standard Warranty</fullName>
                </value>
                <value>
                    <fullName>Training Factory</fullName>
                </value>
                <value>
                    <fullName>Training On Site</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Warranty Reserve</fullName>
                </value>
                <value>
                    <fullName>Witness Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Two_Amount__c</fullName>
        <description>Specifies amount of second miscellaneous cost add on.</description>
        <inlineHelpText>Specifies amount of second miscellaneous cost add on.
Divide this cost by Quantity of Product item</inlineHelpText>
        <label>Misc. Add On Two $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Two_Type__c</fullName>
        <description>Specifies type of second miscellaneous cost add on.</description>
        <inlineHelpText>Specifies type of second miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On Two Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contingency</fullName>
                </value>
                <value>
                    <fullName>Contractor Markup</fullName>
                </value>
                <value>
                    <fullName>CO-OP Marketing Reserve</fullName>
                </value>
                <value>
                    <fullName>Extended Warranty</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Labor Hours</fullName>
                </value>
                <value>
                    <fullName>Maintenance Visits</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Standard Warranty</fullName>
                </value>
                <value>
                    <fullName>Training Factory</fullName>
                </value>
                <value>
                    <fullName>Training On Site</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Warranty Reserve</fullName>
                </value>
                <value>
                    <fullName>Witness Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>